# common_cmake

./: Readme.md  clang-cross-x64.cmake  clang-cross-x86.cmake  clang-x64.cmake  clang-x86.cmake  git_watcher.cmake  i686-w64-mingw32.cmake  llvm-i686-w64-mingw32.cmake  llvm-x86_64-w64-mingw32.cmake  msvc.cmake  x86_64-w64-mingw32.cmake
explicit_python/: .gitignore  CMakeLists.txt  Readme.md  download.py  symlink_this.py
templates/: clang-cross.cmake  clang.cmake  mingw.cmake
